SR Parent 39 - Move to Jakarta 10 - Use SmallRye Testing BOM and Jetty - Move to JUnit 5